--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "bin": {
     "node-rps": "./bin/rps-cli.js",
-    "node-rpsls": "rpsls-cli.js"
+    "node-rpsls": "./bin/rpsls-cli.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
